2021/07/26 Visenri

    * support/regression/collate-results.py
      support/regression/compact-results.py
      Added processing for the stack overflow message from simulator.
      Added new check to reset state machine and name with "Simulation started" string
      Added checks to validate the name after "--- Running", because sometimes we get garbage, because of caotic program behavior (due to stack overflow or wrong code).
      Added the possibility to parse hex values instead of decimal [#393].
      Better output in case of a catastrophic failure ("--- Summary" not found).
      Fixed wrong regular expression to find ".ihx" file.

2021/07/26 Visenri

    * sdas/aspdk13/pdk13mch.c
      sdas/aspdk13/pdk13pst.c
      sdas/aspdk14/pdk14mch.c
      sdas/aspdk14/pdk14pst.c
      sdas/aspdk15/pdk15mch.c
      sdas/aspdk15/pdk15pst.c
      sdas/aspdk16/pdk16mch.c
      sdas/aspdk16/pdk16pst.c
      sdas/aspdk/pdk.h
      sdas/aspdk/pdkadr.c
      sdas/aspdk/pdkmch.c
      Added assembler support for new pdk .io mnemonics (bug #3259).

    * src/pdk/gen.c
      src/pdk/main.c
      src/pdk/peep.c
      src/pdk/peeph.def
      Updated compiler generated assembly and rules according to new pdk .io mnemonics

2021/07/26 Visenri

    * sim/ucsim/pdk.src/inst.cc
    * sim/ucsim/pdk.src/instcl.h
    * sim/ucsim/sim.src/sim.cc
      Added support for stack overflow detection.
      Fixed wrong order of output to stdout when program is stopped.
      Added newline to make sure we get a separate line for the "Stop"

2021-07-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y,
	* src/SDCCsymt.c,
	* src/SDCCsymt.h: fix bugs #3212 and #3213

2021-07-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (processFuncArgs): minor correction to #3260 bug fix

2021-07-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (processFuncPtrArgs,processFuncArgs),
	* src/SDCCsymt.h,
	* src/SDCCmem.c (allocVariables): fix bug #3260